--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-07 17:26+0100\n"
+"POT-Creation-Date: 2024-05-08 10:05+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -679,7 +679,40 @@ msgstr "Allwch chi ddarparu datganiad statudol gan eich partner sifil?"
 msgid "Can you provide a statutory declaration from your spouse?"
 msgstr "Allwch chi ddarparu datganiad statudol gan eich priod?"
 
+#: grc/partnership_details/constants.py:19
+msgid "Your civil partner's details"
+msgstr "Manylion eich partner sifil"
+
 #: grc/partnership_details/constants.py:20
+msgid "Your spouse's details"
+msgstr "Manylion eich priod"
+
+#: grc/partnership_details/constants.py:21
+msgid ""
+"We will contact them about what to do if they change their mind about "
+"staying in a civil partnership."
+msgstr ""
+"Byddwn yn cysylltu â nhw i ddweud wrthynt beth allant wneud os byddant yn"
+" newid eu meddwl am aros mewn partneriaeth sifil."
+
+#: grc/partnership_details/constants.py:23
+msgid ""
+"We will contact them about what to do if they change their mind about "
+"staying married."
+msgstr ""
+"Byddwn yn cysylltu â nhw i ddweud wrthynt beth allant wneud os byddant yn"
+" newid eu meddwl am aros yn briod."
+
+#: grc/partnership_details/constants.py:25
+msgid ""
+" We will also let them know how their pensions and benefits may be "
+"affected if you receive a Gender Recognition Certificate."
+msgstr ""
+" Byddwn hefyd yn rhoi gwybod iddynt sut y gall hyn effeithio ar eu "
+"pensiynau a’u budd-daliadau os byddwch yn cael Tystysgrif Cydnabod "
+"Rhywedd."
+
+#: grc/partnership_details/constants.py:29
 msgid ""
 "Select if you plan to remain married or in your civil partnership after "
 "receiving your Gender Recognition Certificate"
@@ -687,13 +720,29 @@ msgstr ""
 "Dewiswch os ydych chi’n bwriadu aros yn briod neu mewn partneriaeth sifil"
 " ar ôl cael eich Tystysgrif Cydnabod Rhywedd"
 
-#: grc/partnership_details/constants.py:22
+#: grc/partnership_details/constants.py:31
 msgid ""
 "Select if you can provide a declaration of consent from your spouse or "
 "civil partner"
 msgstr ""
 "Dewiswch os ydych chi'n gallu darparu datganiad o gydsyniad gan eich "
 "priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:32
+msgid "Enter your spouse or civil partner's title"
+msgstr "Nodwch deitl eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:33
+msgid "Enter your spouse or civil partner's first name"
+msgstr "Nodwch enw cyntaf eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:34
+msgid "Enter your spouse or civil partner's last name"
+msgstr "Nodwch gyfenw eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:35
+msgid "Enter your spouse or civil partner's postal address"
+msgstr "Nodwch gyfeiriad post eich  priod neu bartner sifil"
 
 #: grc/personal_details/constants.py:6
 msgid "Male"
@@ -1998,7 +2047,7 @@ msgstr ""
 #: grc/templates/partnership-details/current-check.html:37
 msgid ""
 "If you are in the process of ending, or you plan to end your marriage or "
-"civil partnership, you should select your current legal status"
+"civil partnership, you should select your current, legal status"
 msgstr ""
 "Os ydych yn y broses o ddod â’ch priodas neu bartneriaeth sifil i ben, "
 "neu os ydych yn bwriadu dod â’ch priodas neu bartneriaeth sifil i ben, "
@@ -2008,6 +2057,25 @@ msgstr ""
 #: grc/templates/partnership-details/partner-agrees.html:20
 msgid "Declaration of consent"
 msgstr "Datganiad o gydsyniad"
+
+#: grc/templates/partnership-details/partner-details.html:39
+#: grc/templates/personal-details/name.html:48
+msgid "Title"
+msgstr "Teitl"
+
+#: grc/templates/partnership-details/partner-details.html:49
+#: grc/templates/personal-details/name.html:59
+msgid "First name"
+msgstr "Enw cyntaf"
+
+#: grc/templates/partnership-details/partner-details.html:59
+#: grc/templates/personal-details/name.html:79
+msgid "Last name"
+msgstr "Cyfenw"
+
+#: grc/templates/partnership-details/partner-details.html:70
+msgid "Postal address – including postcode or zip code"
+msgstr "Cyfeiriad ar gyfer postio - gan gynnwys cod post neu god sip"
 
 #: grc/templates/personal-details/address.html:8
 #: grc/templates/personal-details/address.html:27
@@ -2243,10 +2311,6 @@ msgstr "newid eich enw drwy weithred newid enw (yn agor mewn tab newydd)"
 msgid "before you apply for a Gender Recognition Certificate"
 msgstr "cyn i chi wneud cais am Dystysgrif Cydnabod Rhywedd"
 
-#: grc/templates/personal-details/name.html:48
-msgid "Title"
-msgstr "Teitl"
-
 #: grc/templates/personal-details/name.html:49
 msgid ""
 "For internal use only. This will not appear on your Gender Recognition "
@@ -2254,6 +2318,10 @@ msgid ""
 msgstr ""
 "At ddefnydd mewnol yn unig. Ni fydd hwn yn ymddangos ar eich Tystysgrif "
 "Cydnabod Rhywedd."
+
+#: grc/templates/personal-details/name.html:69
+msgid "Middle names (only required if you have middle names)"
+msgstr "Enwau canol (dim ond os oes gennych enwau canol)"
 
 #: grc/templates/personal-details/previous-names-check.html:23
 msgid "You will need to upload documents that show this"
@@ -3492,4 +3560,14 @@ msgstr "Byddwch angen eich cyfeirnod i ddychwelyd i’ch cais"
 #: grc/templates/start-application/reference-number.html:27
 msgid "Keep a record of it – it can't be recovered if you lose it"
 msgstr "Cadwch gofnod ohono - ni allwch ei gael yn ôl os byddwch yn ei golli"
+
+#~ msgid ""
+#~ "We will contact them about what to"
+#~ " do if they change their mind "
+#~ "about staying married. We will also "
+#~ "let them know how their pensions "
+#~ "and benefits may be affected if "
+#~ "you receive a Gender Recognition "
+#~ "Certificate."
+#~ msgstr ""
 
