--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-08 11:58+0100\n"
+"POT-Creation-Date: 2024-05-08 14:09+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -630,6 +630,215 @@ msgstr ""
 #: grc/lazy/lazy_form_custom_validators.py:96
 msgid "File does not have an approved extension."
 msgstr ""
+
+#: grc/partnership_details/constants.py:6
+msgid "If you are in a same-sex civil partnership and want "
+msgstr "Os ydych mewn partneriaeth sifil o’r un rhyw ac rydych eisiau "
+
+#: grc/partnership_details/constants.py:7
+msgid "convert your civil partnership to a marriage (opens in a new tab)"
+msgstr "newid eich partneriaeth sifil yn briodas (yn agor mewn tab newydd)"
+
+#: grc/partnership_details/constants.py:8
+msgid ", you must do that before you apply for a Gender Recognition Certificate."
+msgstr ""
+", mae’n rhaid i chi wneud hynny cyn i chi wneud cais am Dystysgrif "
+"Cydnabod Rhywedd."
+
+#: grc/partnership_details/constants.py:10
+msgid ""
+"If you intend to remain in a civil partnership, your civil partner needs "
+"to fill in a "
+msgstr ""
+"Os ydych yn bwriadu aros mewn partneriaeth sifil, mae angen i’ch partner "
+"sifil lenwi "
+
+#: grc/partnership_details/constants.py:12
+msgid "If you intend to remain married, your spouse needs to fill in a "
+msgstr "Os ydych yn bwriadu parhau i fod yn briod, bydd angen i’ch priod lenwi "
+
+#: grc/partnership_details/constants.py:13
+msgid "statutory declaration for civil partners (opens in a new tab)"
+msgstr "datganiad statudol ar gyfer partneriaid sifil (yn agor mewn tab newydd)"
+
+#: grc/partnership_details/constants.py:14
+msgid "statutory declaration for spouses (opens in a new tab)"
+msgstr "datganiad statudol ar gyfer priod (yn agor mewn tab newydd)"
+
+#: grc/partnership_details/constants.py:15
+msgid ", and sign it in front of someone authorised to administer oaths."
+msgstr ""
+", a’i lofnodi ym mhresenoldeb rhywun sydd wedi’i awdurdodi i weinyddu "
+"llwon."
+
+#: grc/partnership_details/constants.py:16
+msgid "Can you provide a statutory declaration from your civil partner?"
+msgstr "Allwch chi ddarparu datganiad statudol gan eich partner sifil?"
+
+#: grc/partnership_details/constants.py:17
+msgid "Can you provide a statutory declaration from your spouse?"
+msgstr "Allwch chi ddarparu datganiad statudol gan eich priod?"
+
+#: grc/partnership_details/constants.py:19
+msgid "Your civil partner's details"
+msgstr "Manylion eich partner sifil"
+
+#: grc/partnership_details/constants.py:20
+msgid "Your spouse's details"
+msgstr "Manylion eich priod"
+
+#: grc/partnership_details/constants.py:21
+msgid ""
+"We will contact them about what to do if they change their mind about "
+"staying in a civil partnership."
+msgstr ""
+"Byddwn yn cysylltu â nhw i ddweud wrthynt beth allant wneud os byddant yn"
+" newid eu meddwl am aros mewn partneriaeth sifil."
+
+#: grc/partnership_details/constants.py:23
+msgid ""
+"We will contact them about what to do if they change their mind about "
+"staying married."
+msgstr ""
+"Byddwn yn cysylltu â nhw i ddweud wrthynt beth allant wneud os byddant yn"
+" newid eu meddwl am aros yn briod."
+
+#: grc/partnership_details/constants.py:25
+msgid ""
+" We will also let them know how their pensions and benefits may be "
+"affected if you receive a Gender Recognition Certificate."
+msgstr ""
+" Byddwn hefyd yn rhoi gwybod iddynt sut y gall hyn effeithio ar eu "
+"pensiynau a’u budd-daliadau os byddwch yn cael Tystysgrif Cydnabod "
+"Rhywedd."
+
+#: grc/partnership_details/constants.py:28
+msgid "Remain married"
+msgstr "Aros yn briod"
+
+#: grc/partnership_details/constants.py:29
+msgid "Remain in your civil partnership"
+msgstr "Aros yn eich partneriaeth sifil"
+
+#: grc/partnership_details/constants.py:30
+msgid "Spouse's name"
+msgstr "Enw’ch priod"
+
+#: grc/partnership_details/constants.py:31
+msgid "Civil partner's name"
+msgstr "Enw’ch partner sifil"
+
+#: grc/partnership_details/constants.py:32
+msgid "Spouse's postal address"
+msgstr "Cyfeiriad eich priod ar gyfer postio"
+
+#: grc/partnership_details/constants.py:33
+msgid "Civil partner's postal address"
+msgstr "Cyfeiriad eich partner sifil ar gyfer postio"
+
+#: grc/partnership_details/constants.py:34
+msgid "Can provide a declaration of consent from your spouse"
+msgstr "Gallu darparu datganiad o gydsyniad gan eich priod"
+
+#: grc/partnership_details/constants.py:35
+msgid "Can provide a declaration of consent from your civil partner"
+msgstr "Gallu darparu datganiad o gydsyniad gan eich partner sifil"
+
+#: grc/partnership_details/constants.py:37
+msgid ""
+"When you apply for a certificate, your civil partner needs to sign a "
+"document if you want to stay in a civil partnership."
+msgstr ""
+"Pan fyddwch yn gwneud cais am dystysgrif, mae angen i'ch partner sifil "
+"lofnodi dogfen os ydych yn bwriadu aros mewn partneriaeth sifil."
+
+#: grc/partnership_details/constants.py:39
+msgid ""
+"If they do not sign the document, or you’re ending the civil partnership,"
+" you will get an ‘interim’ certificate if you continue with your "
+"application."
+msgstr ""
+"Os na fyddant yn llofnodi’r ddogfen, neu os ydych yn dod â’ch "
+"partneriaeth sifil i ben, byddwch yn cael tystysgrif ‘interim’ os byddwch"
+" yn parhau â’ch cais."
+
+#: grc/partnership_details/constants.py:41
+msgid "You can only use the interim certificate to end your civil partnership."
+msgstr ""
+"Gallwch ond defnyddio’r dystysgrif interim i ddod â’ch partneriaeth sifil"
+" i ben."
+
+#: grc/partnership_details/constants.py:42
+msgid ""
+"You will get a full certificate once you’re no longer in a civil "
+"partnership."
+msgstr ""
+"Byddwch yn cael tystysgrif lawn pan na fyddwch yn partneriaeth sifil "
+"mwyach."
+
+#: grc/partnership_details/constants.py:43
+msgid ""
+"When you apply for a certificate, your spouse needs tosign a document if "
+"you want to stay married."
+msgstr ""
+"Pan fyddwch yn gwneud cais am dystysgrif, mae angen i’ch priod lofnodi "
+"dogfen os ydych eisiau aros yn briod."
+
+#: grc/partnership_details/constants.py:45
+msgid ""
+"If they do not sign the document, or you’re ending the marriage, you will"
+" get an ‘interim’ certificate if you continue with your application."
+msgstr ""
+"Os na fyddant yn llofnodi’r ddogfen, neu os ydych yn dod â’ch priodas i "
+"ben, byddwch yn cael tystysgrif ‘interim’ os byddwch yn parhau â’ch cais."
+
+#: grc/partnership_details/constants.py:47
+msgid "You can only use the interim certificate to end your marriage."
+msgstr "Gallwch ond defnyddio’r dystysgrif interim i ddod â’ch priodas i ben."
+
+#: grc/partnership_details/constants.py:48
+msgid "You will get a full certificate once you’re no longer married."
+msgstr "Byddwch yn cael tystysgrif lawn pan na fyddwch yn briod mwyach."
+
+#: grc/partnership_details/constants.py:49
+msgid ""
+"You have 6 months to apply for an annulment, divorce or dissolution from "
+"when you get your interim certificate."
+msgstr ""
+"Mae gennych 6 mis i wneud cais am ddirymiad, ysgariad neu ddiddymiad o’r "
+"adeg pan fyddwch yn cael eich tystysgrif interim."
+
+#: grc/partnership_details/constants.py:53
+msgid ""
+"Select if you plan to remain married or in your civil partnership after "
+"receiving your Gender Recognition Certificate"
+msgstr ""
+"Dewiswch os ydych chi’n bwriadu aros yn briod neu mewn partneriaeth sifil"
+" ar ôl cael eich Tystysgrif Cydnabod Rhywedd"
+
+#: grc/partnership_details/constants.py:55
+msgid ""
+"Select if you can provide a declaration of consent from your spouse or "
+"civil partner"
+msgstr ""
+"Dewiswch os ydych chi'n gallu darparu datganiad o gydsyniad gan eich "
+"priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:56
+msgid "Enter your spouse or civil partner's title"
+msgstr "Nodwch deitl eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:57
+msgid "Enter your spouse or civil partner's first name"
+msgstr "Nodwch enw cyntaf eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:58
+msgid "Enter your spouse or civil partner's last name"
+msgstr "Nodwch gyfenw eich priod neu bartner sifil"
+
+#: grc/partnership_details/constants.py:59
+msgid "Enter your spouse or civil partner's postal address"
+msgstr "Nodwch gyfeiriad post eich  priod neu bartner sifil"
 
 #: grc/partnership_details/constants.py:6
 msgid "If you are in a same-sex civil partnership and want "
@@ -2109,6 +2318,11 @@ msgstr ""
 "Os ydych yn y broses o ddod â’ch priodas neu bartneriaeth sifil i ben, "
 "neu os ydych yn bwriadu dod â’ch priodas neu bartneriaeth sifil i ben, "
 "dylech ddewis eich statws cyfreithiol ar hyn o bryd."
+
+#: grc/templates/partnership-details/interim-check.html:5
+#: grc/templates/partnership-details/interim-check.html:17
+msgid "Interim Gender Recognition Certificate"
+msgstr "Tystysgrif Cydnabod Rhywedd Interim"
 
 #: grc/templates/partnership-details/partner-agrees.html:7
 #: grc/templates/partnership-details/partner-agrees.html:20
