--- a/grc/translations/cy/LC_MESSAGES/messages.po
+++ b/grc/translations/cy/LC_MESSAGES/messages.po
@@ -7,7 +7,7 @@ msgid ""
 msgstr ""
 "Project-Id-Version: PROJECT VERSION\n"
 "Report-Msgid-Bugs-To: EMAIL@ADDRESS\n"
-"POT-Creation-Date: 2024-05-09 15:04+0100\n"
+"POT-Creation-Date: 2024-05-10 09:23+0100\n"
 "PO-Revision-Date: 2024-03-08 17:38+0000\n"
 "Last-Translator: FULL NAME <EMAIL@ADDRESS>\n"
 "Language: cy\n"
@@ -21,7 +21,7 @@ msgstr ""
 
 #: grc/list_status.py:6
 msgid "COMPLETED"
-msgstr ""
+msgstr "WEDI'I GWBLHAU"
 
 #: grc/list_status.py:7
 msgid "IN PROGRESS"
@@ -37,7 +37,7 @@ msgstr "METHU DECHRAU ETO"
 
 #: grc/list_status.py:10
 msgid "IN REVIEW"
-msgstr ""
+msgstr "YN CAEL EI ADOLYGU"
 
 #: grc/list_status.py:11
 msgid "ERROR"
@@ -320,6 +320,8 @@ msgstr ""
 #: grc/business_logic/constants.py:61
 msgid "We’ve resent you a security code. This can take a few minutes to arrive"
 msgstr ""
+"Rydym wedi ail anfon cod diogelwch atoch. Gall gymryd ychydig o funudau i"
+" gyrraedd"
 
 #: grc/business_logic/constants.py:64
 msgid "Select if you have ever changed your name to reflect your gender"
@@ -952,6 +954,14 @@ msgstr "Do, ond rwyf wedi colli fy nghyfeirnod"
 #: grc/templates/base.html:66
 msgid "Apply for a Gender Recognition Certificate"
 msgstr "Gwneud cais am Dystysgrif Cydnabod Rhywedd"
+
+#: grc/templates/base.html:105 grc/templates/policies/cookies.html:12
+msgid "Success"
+msgstr "Llwydd"
+
+#: grc/templates/base.html:110
+msgid "Email resent"
+msgstr "E-bost wedi'i ail anfon"
 
 #: grc/templates/security-code.html:7 grc/templates/security-code.html:20
 msgid "Enter security code"
@@ -2914,10 +2924,6 @@ msgstr "Cynhaliwyd y prawf gan y Ganolfan Hygyrchedd Digidol"
 msgid "Cookies"
 msgstr "Cwyis"
 
-#: grc/templates/policies/cookies.html:12
-msgid "Success"
-msgstr "Llwydd"
-
 #: grc/templates/policies/cookies.html:16
 msgid "You’ve set your cookie preferences"
 msgstr "Rydych wedi cadw eich dewisiadau cwcis"
@@ -3584,6 +3590,8 @@ msgid ""
 "Do you consent to the General Register Office contacting you about your "
 "application?"
 msgstr ""
+"Ydych chi'n cydsynio i'r Swyddfa Gofrestru Gyffredinol gysylltu â chi "
+"yngl?n â'ch cais?"
 
 #: grc/templates/start-application/declaration.html:40
 msgid "I consent"
